--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -57,9 +57,9 @@
           </ul>
         </div>
 
-        <div class="contact">
-          <p class="contact__paragraph">Feel free to contact</p>
-          <a class="contact__phone" href="tel:+610383766284"> +61 (0) 383 766 284</a>
+        <div class="connect">
+          <p class="connect__paragraph">Feel free to contact</p>
+          <a class="connect__phone" href="tel:+610383766284"> +61 (0) 383 766 284</a>
         </div>
       </div>
     </div>
