--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -62,7 +62,7 @@
         </p>
         <button class="hero__link-btn" type="button">
           <svg class="hero__icon" width="8" height="8">
-            <use href="/src/images/icons.svg"></use>
+            <use href="/src/images/icons2.svg#icon-arrow"></use>
           </svg>
         </button>
       </div>
