--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -3,6 +3,8 @@
   grid-template-columns: 1fr;
   gap: 168px;
   padding-bottom: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .products {
@@ -23,7 +25,7 @@
     font-weight: 800;
     line-height: normal;
     text-transform: uppercase;
-    padding-top: 146px;
+    padding-top: 60px;
   }
   &__title {
     color: #131313;
@@ -59,7 +61,7 @@
     font-weight: 400;
     line-height: 176%;
     letter-spacing: 0.56px;
-    padding: 0 40px;
+    padding: 0 27px;
   }
 }
 .products__list {
@@ -128,16 +130,26 @@
   z-index: 2;
 }
 
+@media (min-width: 480px) {
+  .products__grid {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
 @media (min-width: 768px) {
   .products__grid {
     grid-template-columns: repeat(3, 1fr);
-    gap: 19px;
+    gap: 15px;
+    padding-left: 19px;
+    padding-right: 19px;
   }
 }
 
 @media (min-width: 1200px) {
   .products__grid {
     gap: 29px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
   li.products__list {
     height: 536px;
@@ -202,7 +214,7 @@
     background-image: url(/src/images/tablet/background-tablet.png);
     background-size: auto;
     background-position: 33%;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     z-index: -1;
     width: 100%;
     height: 100%;
@@ -215,7 +227,7 @@
       background-image: url(/src/images/desktop/background-desktop.png);
       background-size: auto;
       background-position: 33% 80%;
-      background-repeat: no-repeat;
+      background-repeat: repeat;
       z-index: -1;
       width: 100%;
       height: 100%;
