--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<section class="contact-main">
+<section class="contact-main" id="#contact-navi">
   <h2 class="contact-main__title">Contacts</h2>
   <section class="contact container">
     <div class="contact__container">
@@ -8,7 +8,14 @@
       </div>
       <p class="contact__simply-text">Chicago</p>
       <ul class="contact__links-list">
-        <li class="contact__box"><span>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</span></li>
+        <li class="contact__box">
+          <a
+            class="contact__details"
+            target="_blank"
+            href="https://www.google.com/maps/place/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+Stany+Zjednoczone/@41.7033903,-87.782315,17z/data=!3m1!4b1!4m6!3m5!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!8m2!3d41.7033903!4d-87.7797401!16s%2Fg%2F11jnxh2b00?entry=ttu"
+            >10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
+          >
+        </li>
       </ul>
       <p class="contact__under-line"></p>
       <ul class="contact__list-style-none">
@@ -46,7 +53,12 @@
       <p class="contact__simply-text">Los Angeles</p>
       <ul class="contact__links-list">
         <li class="contact__box">
-          <span>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</span>
+          <a
+            class="contact__details"
+            target="_blank"
+            href="https://www.google.com/maps/search/1003+manhattan+ave+manhattan+beach+ca+90263+usa/@33.9593098,-118.6447876,12z/data=!3m1!4b1?entry=ttu"
+            >1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
+          >
         </li>
       </ul>
       <p class="contact__under-line"></p>
@@ -84,7 +96,14 @@
       </div>
       <p class="contact__simply-text">New York</p>
       <ul class="contact__links-list">
-        <li class="contact__box"><span>726 Sterling Pl, Brooklyn, NY 11222, USA</span></li>
+        <li class="contact__box">
+          <a
+            class="contact__details"
+            target="_blank"
+            href="https://www.google.com/maps/place/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+Stany+Zjednoczone/@41.7033903,-87.782315,17z/data=!3m1!4b1!4m6!3m5!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!8m2!3d41.7033903!4d-87.7797401!16s%2Fg%2F11jnxh2b00?entry=ttu"
+            >726 Sterling Pl, Brooklyn, NY 11222, USA</a
+          >
+        </li>
       </ul>
       <p class="contact__under-line"></p>
       <ul class="contact__list-style-none">
