id and z idex header

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Krowa-->
-<section class="about">
+<section class="about" id="advantages">
   <div class="container">
     <article class="about__title-box">
       <p class="about__label">TRADITION AND LOVE</p>
