--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,9 +33,9 @@
       </a>
       <ul class="nav__list">
         <li class="nav__item"><a class="nav__link" href="">Home</a></li>
-        <li class="nav__item"><a class="nav__link" href="">How it`s made?</a></li>
-        <li class="nav__item"><a class="nav__link" href="">Our products</a></li>
-        <li class="nav__item"><a class="nav__link" href="">Contact</a></li>
+        <li class="nav__item"><a class="nav__link" href="#advantages">How it`s made?</a></li>
+        <li class="nav__item"><a class="nav__link" href="#product">Our products</a></li>
+        <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
       </ul>
       <ul class="nav__buttons-list">
         <li>
@@ -69,8 +69,7 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <button type="button" class="menu-container__close-btn js-close-menu">
     <svg width="13" height="13">
-          <use href="./images/icons.svg#icon-close-x">
-          </use>
+      <use href="./images/icons.svg#icon-close-x"></use>
     </svg>
   </button>
   <div class="mobile-menu">
@@ -80,10 +79,8 @@
       <li class="mobile-menu_nav-item"><a class="" href="">Our products</a></li>
       <li class="mobile-menu_nav-item"><a class="" href="">Contact</a></li>
     </ul>
-  </div>  
+  </div>
 </div>
-
-
 
 <!--Modal-->
 
@@ -168,4 +165,3 @@
   </div>
 </div>
 <script src="./js/modal.js"></script>
-
