--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <section>
-  <div class="products container">
+  <div class="products container" id="product">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">Products</h2>
     <ul class="products__grid">
