--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<section class="contact-main" id="#contact-navi">
+<section class="contact-main">
   <h2 class="contact-main__title">Contacts</h2>
   <section class="contact container">
     <div class="contact__container">
