--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -16,7 +16,7 @@
         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
         addition, you have beautiful serving, cozy atmosphere and polite staff.
       </p>
-      <h2 class="slider__heading">Emily, Los Angeles</h2>
+      <h2 class="slider__heading" id="contact">Emily, Los Angeles</h2>
     </div>
   </section>
 </section>
