--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,66 +1,65 @@
 .header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(132, 161, 120, 1);
-	&__container {
-		position: relative;
-	}
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(132, 161, 120, 1);
+  z-index: 999;
+  &__container {
+    position: relative;
+  }
 
-	&__mobile-menu {
-		display: flex;
-        justify-content: space-between;
-        background-color: transparent;
-        border: none;
-		margin: auto;
-		color: rgba(255, 255, 255, 1);
-		@include desktop {
-			display: none;
-		}
-	}
+  &__mobile-menu {
+    display: flex;
+    justify-content: space-between;
+    background-color: transparent;
+    border: none;
+    margin: auto;
+    color: rgba(255, 255, 255, 1);
+    @include desktop {
+      display: none;
+    }
+  }
 }
 
 .button {
-	display: none;
-	@include tablet {
-		display: flex;
-		padding: 10px 30px;
-		border: none;
-		border-radius: 10px;
-		background-color: rgba(248, 210, 78, 1);
-	}
+  display: none;
+  @include tablet {
+    display: flex;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgba(248, 210, 78, 1);
+  }
 }
 
 .nav {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 14px 20px 0px;
-	&__buttons-list{
-		display: flex;
-		gap: 30px;
-	}
-	
-	
-	
-	&__list {
-		display: none;
-		@include desktop {
-			display: flex;
-			gap: 30px;
-		}
-	}
-	&__link {
-		font-size: 16px;
-		font-weight: bold;
-		font-family: sans-serif;
-		color: rgba(252, 252, 252, 1);
-		text-decoration: none;
-		&:hover,
-		&:focus,
-		&:active {
-			color: rgba(248, 210, 78, 1);
-		}
-	}
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px 20px 0px;
+  &__buttons-list {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__list {
+    display: none;
+    @include desktop {
+      display: flex;
+      gap: 30px;
+    }
+  }
+  &__link {
+    font-size: 16px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: rgba(252, 252, 252, 1);
+    text-decoration: none;
+    &:hover,
+    &:focus,
+    &:active {
+      color: rgba(248, 210, 78, 1);
+    }
+  }
 }
