--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -135,7 +135,7 @@
         }
       }
 
-      &__wrapper {
+      &__com {
         width: 34px;
         height: 34px;
         border-radius: 50%;
@@ -149,8 +149,9 @@
         fill: #84a178;
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
-      &__com:hover,
-      &__com:focus {
+
+      .social-media__com:hover .social-media__icon,
+      .social-media__com:focus .social-media__icon {
         fill: #fcfcfc;
       }
     }
