--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,7 +2,11 @@
 <section class="bg">
   <section class="section container">
     <div class="gallery">
-      <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg" />
+      <img
+        class="gallery__image"
+        alt="icecream on table"
+        src="/src/images/reviews/lodyMobile2x.jpg"
+      />
     </div>
     <div class="slider">
       <img
@@ -10,7 +14,7 @@
         src="/src/images/reviews/Emily1x.jpg"
         width="85"
         height="85"
-        alt="kobieta"
+        alt="women"
       />
       <p class="slider__text">
         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
