--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -86,19 +86,19 @@
 
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
-    <button class="modal_btn-svg" type="modal-button" data-modal-close>
+    <button class="modal_btn-svg" type="button" data-modal-close>
       <svg width="13" height="13">
         <use href="./images/icons.svg#icon-close-x"></use>
       </svg>
     </button>
     <form>
       <div class="forms">
-        <legend class="forms_title">Chocolate icecream</legend>
+        <p class="forms_title">Chocolate icecream</p>
         <div class="forms_img">
           <img
             src="./images/icecream.png"
             srcset="./images/icecream@2x.png 2x"
-            alt="Lody czekoladowe"
+            alt="chocoicecream"
           />
         </div>
         <div>
