mobile-menu styled

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -74,10 +74,10 @@
   </button>
   <div class="mobile-menu">
     <ul class="mobile-menu_nav">
-      <li class="mobile-menu_nav-item"><a class="" href="">Home</a></li>
-      <li class="mobile-menu_nav-item"><a class="" href="">How it`s made?</a></li>
-      <li class="mobile-menu_nav-item"><a class="" href="">Our products</a></li>
-      <li class="mobile-menu_nav-item"><a class="" href="">Contact</a></li>
+      <li class="mobile-menu_nav-item">Home</a></li>
+      <li class="mobile-menu_nav-item-black">How it`s made?</a></li>
+      <li class="mobile-menu_nav-item">Our products</a></li>
+      <li class="mobile-menu_nav-item">Contact</a></li>
     </ul>
   </div>
 </div>
