--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
     <div class="hero__content-wrap">
       <div class="hero__main-content">
         <div class="hero__title-content">
-          <h1 class="hero__title title title--light">Ice cream made with passion</h1>
+          <h1 class="hero__title title ">Ice cream made with passion</h1>
           <ul class="hero__main-list">
             <li class="hero__main-item">
               <a class="hero__main-linkA" href="#Products">Products</a>
