--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<section>
+<section class="background">
   <div class="products container" id="product">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">Products</h2>
