--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -190,30 +190,33 @@
       height: 302px;
     }
   }
+  .products__btn-service {
+    margin-bottom: 60px;
+  }
 }
 
-.products {
+.background {
   position: relative;
 }
 
-.products::before {
+.background::before {
   content: '';
   position: absolute;
   background-image: url(/src/images/mobile/background_mobile.png);
-  background-size: auto;
-  background-position: 70% -10%;
+  background-size: cover;
+  background-position: center;
   background-repeat: repeat;
   z-index: -1;
   width: 100%;
   height: 100%;
 }
 @media (min-width: 768px) {
-  .products::before {
+  .background::before {
     content: '';
     position: absolute;
     background-image: url(/src/images/tablet/background-tablet.png);
-    background-size: auto;
-    background-position: 33%;
+    background-size: cover;
+    background-position: center;
     background-repeat: repeat;
     z-index: -1;
     width: 100%;
@@ -221,12 +224,12 @@
   }
 
   @media (min-width: 1200px) {
-    .products::before {
+    .background::before {
       content: '';
       position: absolute;
       background-image: url(/src/images/desktop/background-desktop.png);
-      background-size: auto;
-      background-position: 33% 80%;
+      background-size: cover;
+      background-position: center;
       background-repeat: repeat;
       z-index: -1;
       width: 100%;
