--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,15 +8,15 @@
     </article>
     <figure class="cow">
       <img
-        src="/src/images/mobile/cow.jpg"
+        src="/src/images/mobile/cow.png"
         alt="cow on grass"
         srcset="
-          /src/images/mobile/cow.jpg         480w,
-          /src/images/mobile/x2/cow@2x.jpg   960w,
-          /src/images/tablet/cow.jpg         768w,
-          /src/images/tablet/x2/cow@2x.jpg  1536w,
-          /src/images/desktop/cow.jpg       1200w,
-          /src/images/desktop/x2/cow@x2.jpg 2400w
+          /src/images/mobile/cow.png         480w,
+          /src/images/mobile/x2/cow@2x.png   960w,
+          /src/images/tablet/cow.png         768w,
+          /src/images/tablet/x2/cow@2x.png  1536w,
+          /src/images/desktop/cow.png       1200w,
+          /src/images/desktop/x2/cow@x2.png 2400w
         "
         sizes="(min-width:480px) 480px,(min-width:768px) 768px,(min-width:1200px) 1200px"
         class="cow__img"
