zdj icony i style

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,15 +8,15 @@
     </article>
     <figure class="cow">
       <img
-        src="/src/images/mobile/cow.jpg"
+        src="/src/images/mobile/cow.png"
         alt="cow on grass"
         srcset="
-          /src/images/mobile/cow.jpg         480w,
-          /src/images/mobile/x2/cow@2x.jpg   960w,
-          /src/images/tablet/cow.jpg         768w,
-          /src/images/tablet/x2/cow@2x.jpg  1536w,
-          /src/images/desktop/cow.jpg       1200w,
-          /src/images/desktop/x2/cow@x2.jpg 2400w
+          /src/images/mobile/cow.png         480w,
+          /src/images/mobile/x2/cow@2x.png   960w,
+          /src/images/tablet/cow.png         768w,
+          /src/images/tablet/x2/cow@2x.png  1536w,
+          /src/images/desktop/cow.png       1200w,
+          /src/images/desktop/x2/cow@2x.png 2400w
         "
         sizes="(min-width:480px) 480px,(min-width:768px) 768px,(min-width:1200px) 1200px"
         class="cow__img"
@@ -24,20 +24,20 @@
       <figcaption>
         <ul class="cow__box-list">
           <li class="cow__box-list-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               Ice is a place where you will become not only a little happier, but also healthier.
               Health is the main value for us, and we follow it when creating our handmade desserts.
             </p>
           </li>
           <li class="cow__box-list-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               We use traditional recipes and 100% natural ingredients. Our products are so natural
               that they can be given to children from the age of three years. Sweets lovers can
               expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.
             </p>
           </li>
           <li class="cow__box-list-last-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               This is enough to choose ice cream and coffee for any mood!
             </p>
           </li>
