--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -7,8 +7,9 @@
     padding-top: 32px;
   }
   &__icon {
-    width: 50px;
-    height: 50px;
+    width: 36px;
+    height: 36px;
+    padding: 7px;
     border-radius: 50%;
     background-color: $button-yellow;
   }
