--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,5 @@
-
 <!--Krowa-->
-<section class="about" id="advantages">
+<div class="about" id="advantages">
   <div class="container">
     <article class="about__title-box">
       <p class="about__label">TRADITION AND LOVE</p>
@@ -50,7 +49,7 @@
       </figcaption>
     </figure>
   </div>
-</section>
+</div>
 <section class="advantages container">
   <h6 class="crawler">advantages</h6>
   <div class="wrapper-icon">
