feature hero header
new fixes ( paddings etc )

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,7 +59,7 @@
             </svg>
           </button>
         </li>
-        <li><button type="button" class="button" data-modal-open>Buy now &gt;</button></li>
+        <li><button type="button" class=" header__button" data-modal-open>Buy now &gt;</button></li>
       </ul>
     </nav>
   </div>
