--- a/src/sass/components/_menu-container.scss
+++ b/src/sass/components/_menu-container.scss
@@ -6,6 +6,7 @@
 .menu-container {
     background-color: rgba(132, 161, 120, 1);
     position: fixed;
+    z-index: 999;
     inset: 0;
     transform: translateX(100%);
     transition: transform 250ms;
