--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,3 @@
-
 <header class="header">
   <div class="header__container container">
     <nav class="nav">
@@ -74,10 +73,10 @@
   </button>
   <div class="mobile-menu">
     <ul class="mobile-menu_nav">
-      <li class="mobile-menu_nav-item">Home</a></li>
-      <li class="mobile-menu_nav-item-black">How it`s made?</a></li>
-      <li class="mobile-menu_nav-item">Our products</a></li>
-      <li class="mobile-menu_nav-item">Contact</a></li>
+      <li class="mobile-menu_nav-item"><a>Home</a></li>
+      <li class="mobile-menu_nav-item-black"><a>How it`s made?</a></li>
+      <li class="mobile-menu_nav-item"><a>Our products</a></li>
+      <li class="mobile-menu_nav-item"><a>Contact</a></li>
     </ul>
   </div>
 </div>
