--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,6 +1,5 @@
-
-<section class="bg">
-  <section class="section container">
+<div class="bg">
+  <div class="section container">
     <div class="gallery">
       <img
         class="gallery__image"
@@ -22,5 +21,5 @@
       </p>
       <h2 class="slider__heading" id="contact">Emily, Los Angeles</h2>
     </div>
-  </section>
-</section>
+  </div>
+</div>
