feature-header/hero
changed name heder for heading

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import './vars/globals';
 @import './vars/mixins';
 
-@import './components/header';
+@import './components/heading';
 @import './components/hero';
 @import './components/contacts';
 @import './components/products';
