--- a/src/partials/heading.html
+++ b/src/partials/heading.html
@@ -1,8 +1,8 @@
 
-<header class="header">
-  <div class="header__container container">
+<header class="heading">
+  <div class="heading__container container">
     <nav class="nav">
-      <a class="header__logo logo" href="./index.html">
+      <a class="heading__logo logo" href="./index.html">
         <picture>
           <source
             srcset="
@@ -32,7 +32,7 @@
         </picture>
       </a>
       <ul class="nav__list">
-        <li class="nav__item"><a class="nav__link" href="">Home</a></li>
+        <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
         <li class="nav__item"><a class="nav__link" href="#advantages">How it`s made?</a></li>
         <li class="nav__item"><a class="nav__link" href="#product">Our products</a></li>
         <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
