update div po raz 3

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,6 @@
-
-<section class="contact-main">
+<div class="contact-main">
   <h2 class="contact-main__title">Contacts</h2>
-  <section class="contact container">
+  <div class="contact container">
     <div class="contact__container">
       <div class="contact__orginal-heading-container">
         <p class="contact__title">cafe</p>
@@ -134,7 +133,7 @@
         </li>
       </ul>
     </div>
-  </section>
+  </div>
   <ul class="contact__btn-list">
     <li class="contact__btn">
       <button class="contact__btn-btn" type="button">
@@ -151,4 +150,4 @@
       </button>
     </li>
   </ul>
-</section>
+</div>
