icon in button :)
ikona w przycisku

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -42,7 +42,12 @@
           </li>
           <li>
             <div class="about__button">
-              <button class="about__button-body" type="button">Read more &gt;</button>
+              <button class="about__button-body" type="button">
+                Read more
+                <svg width="12" , height="12">
+                  <use href="images/icons2.svg#icon-arrow-bold"></use>
+                </svg>
+              </button>
             </div>
           </li>
         </ul>
