--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
-<header class="header">
-  <div class="header__container container">
+<header class="heading">
+  <div class="heading__container container">
     <nav class="nav">
-      <a class="header__logo logo" href="./index.html">
+      <a class="heading logo" href="./index.html">
         <picture>
           <source
             srcset="
@@ -58,7 +58,7 @@
             </svg>
           </button>
         </li>
-        <li><button type="button" class=" header__button" data-modal-open>Buy now &gt;</button></li>
+        <li><button type="button" class=" heading__button" data-modal-open>Buy now &gt;</button></li>
       </ul>
     </nav>
   </div>
