--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,4 @@
-.header {
+.heading {
   top: 0;
   left: 0;
   right: 0;
@@ -52,7 +52,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top:14px;
+  padding-top: 14px;
   &__buttons-list {
     display: flex;
     gap: 30px;
