--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -44,7 +44,7 @@
             <div class="about__button">
               <button class="about__button-body" type="button">
                 Read more
-                <svg width="12" , height="12">
+                <svg width="12" height="12">
                   <use href="images/icons2.svg#icon-arrow-bold"></use>
                 </svg>
               </button>
