--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
         </picture>
       </a>
       <ul class="nav__list">
-        <li class="nav__item"><a class="nav__link" href="">Home</a></li>
+        <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
         <li class="nav__item"><a class="nav__link" href="#advantages">How it`s made?</a></li>
         <li class="nav__item"><a class="nav__link" href="#product">Our products</a></li>
         <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
