--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -131,4 +131,9 @@
   &__box-list-last-item {
     margin-bottom: 24px;
   }
+  .--cow__text-list {
+    @include tablet {
+      text-align: left;
+    }
+  }
 }
