--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -23,20 +23,20 @@
       <figcaption>
         <ul class="cow__box-list">
           <li class="cow__box-list-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               Ice is a place where you will become not only a little happier, but also healthier.
               Health is the main value for us, and we follow it when creating our handmade desserts.
             </p>
           </li>
           <li class="cow__box-list-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               We use traditional recipes and 100% natural ingredients. Our products are so natural
               that they can be given to children from the age of three years. Sweets lovers can
               expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.
             </p>
           </li>
           <li class="cow__box-list-last-item">
-            <p class="cow__text-list">
+            <p class="cow__text-list --cow__text-list">
               This is enough to choose ice cream and coffee for any mood!
             </p>
           </li>
