--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -9,6 +9,7 @@
   &__icon {
     width: 50px;
     height: 50px;
+    padding: 7px;
     border-radius: 50%;
     background-color: $button-yellow;
   }
